# studytracker-api

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yaml  justfile  pyproject.toml
config/: .env  .env.dev  config.dev.toml  config.toml  nginx.conf
src/studytracker/api/: __init__.py  config.py  error_handler.py  goal_mapper.py
src/studytracker/api/port/: data_context.py
src/studytracker/api/routers/: goals.py  root.py
src/studytracker/application/command/: create_goal.py
src/studytracker/application/commands/: create_goal.py  create_subgoal.py  delete_goal.py  set_active_status.py  set_status.py  update_goal.py
src/studytracker/application/dto/: goal.py
src/studytracker/application/error/: goal.py
src/studytracker/application/errors/: goal.py
src/studytracker/application/port/: data_context.py  id_generator.py
src/studytracker/application/ports/: data_context.py  goal_mapper.py  id_generator.py
src/studytracker/application/queries/: get_goal.py  get_many_goals.py  get_with_subgoals.py
src/studytracker/bootstrap/: __init__.py  config.py  main.py
src/studytracker/bootstrap/di/: container.py
src/studytracker/domain/entities/: base.py  goal.py
src/studytracker/domain/entity/: goal.py
src/studytracker/domain/errors/: base.py  goal.py
src/studytracker/domain/readers/: goal.py
src/studytracker/domain/repositories/: goal.py
src/studytracker/domain/repository/: goal_repository.py
src/studytracker/entities/: goal.py
src/studytracker/entity/common/: entity.py
src/studytracker/infrastructure/adapters/: goal_mapper.py  id_generator.py
(+33 files in other folders)
